gitOps/infra/infra-service/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: infra-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.k3s.szlab.uk"
    - "*.k3s.shuaizhang.net"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: szlab-wildcard-tls
    hosts:
    - "*.k3s.szlab.uk"
    - "*.k3s.shuaizhang.net"
