gitOps/infra/infra-service/argo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - argo.k3s.szlab.uk
  gateways:
  - istio-system/infra-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
